# django-prefect-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.prefect.yml  docker-compose.staging.yml  docker-compose.yml  docker-stack.prefect.yml  docker-stack.yml  dodo.py  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  poll_handlers.py  services.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_unique_email.py  0002_add_userprofile.py  0003_userprofile_notify_fields.py  0004_notification.py  0005_userprofile_mcp_token_budget_and_more.py
backend/apps/accounts/templates/accounts/: confirm_email_invalid.html  email_confirmation_sent.html  login.html  notifications.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  settings.html  signup.html  user_list.html
backend/apps/accounts/templates/accounts/components/: user_menu.html
backend/apps/accounts/templates/accounts/email/: confirm_email.txt  password_reset.txt
backend/apps/accounts/templates/accounts/partials/: api_key_form.html  api_key_list.html  login_form.html  notification_badge.html  notification_dropdown.html  signup_form.html  user_row.html  user_table.html
backend/apps/accounts/tests/: test_notifications.py  test_userprofile.py  test_views_accounts.py
backend/apps/core/: apps.py  mixins.py  poll_handlers.py  table_filters.py  urls.py  views.py
backend/apps/core/templates/core/: base.html  base_dashboard.html  base_public.html  index.html
backend/apps/core/templates/core/components/: footer.html  navbar.html  sidebar.html
backend/apps/core/templates/core/components/data_table/: _active_chips.html  _bulk_bar.html  _col_panel.html  _filter_panel.html  _thead.html  table.html
backend/apps/core/templates/core/components/ui/: badge.html  breadcrumbs.html  empty_state.html  form_checkbox.html  form_input.html  modal.html  pagination.html  search_bar.html  stat_card.html
backend/apps/core/tests/: conftest.py  test_mixins.py  test_table_filters.py  test_views_core.py
backend/apps/dashboard/: admin.py  internal_urls.py  models.py  urls.py  views.py
backend/apps/dashboard/migrations/: 0001_initial.py
backend/apps/dashboard/templates/dashboard/: dashboard.html  render.html
backend/apps/dashboard/templates/dashboard/partials/: chat_panel.html  chat_panel_no_key.html  widget_grid.html
backend/apps/flags/: admin.py  decorators.py  models.py  utils.py
backend/apps/flags/migrations/: 0001_initial.py
backend/apps/flags/templatetags/: flags.py
backend/apps/flags/tests/: test_flags.py
backend/apps/flows/: admin.py  apps.py  internal_urls.py  models.py  poll_handlers.py  runner.py  tasks.py  urls.py  views.py
backend/apps/flows/backends/: __init__.py  base.py  doit.py  prefect.py
backend/apps/flows/management/commands/: setup_s3_buckets.py
backend/apps/flows/migrations/: 0001_initial.py  0002_add_inputpreset.py  0003_add_prediction_result_scoring_model_execution_step.py  0004_seed_scoring_model_v1.py  0005_add_external_run_id.py  0006_executionstep_step_type.py
backend/apps/flows/services/: datalake.py
backend/apps/flows/templates/flows/: admin_dashboard.html  admin_execution_detail.html  admin_executions.html  comparison.html  dashboard.html  execution_detail.html  history.html  index.html  results.html  upload.html
backend/apps/flows/templates/flows/components/: flows_menu.html
backend/apps/flows/templates/flows/email/: execution_failed.txt
backend/apps/flows/templates/flows/partials/: admin_executions_table.html  admin_executions_table_body.html  backend_health_indicator.html  execution_live_status.html  history_table_body.html  prediction_compare_options.html  prediction_error.html  prediction_inputs.html  prediction_result.html  prediction_running.html  preset_controls.html  preset_list.html  preset_save_error.html
backend/apps/flows/templatetags/: flow_extras.py
backend/apps/flows/tests/: conftest.py  test_admin_views.py  test_backends.py  test_datalake.py  test_integration.py  test_management.py  test_models.py  test_notebooks.py  test_presets.py  test_runner.py  test_tasks.py  test_views.py
backend/apps/training/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
backend/apps/training/migrations/: 0001_initial.py  0002_modeltrainingrun.py  0003_modelbacktestresult.py  0004_modelpromotion.py
backend/apps/training/services/: analytics.py  charts.py
backend/apps/training/templates/training/: dataset_detail.html  dataset_list.html  run_detail.html  run_history.html  run_list.html
backend/apps/training/templates/training/partials/: backtest_section.html  chart_skeleton.html  dataset_status.html  promote_section.html  run_status.html
backend/config/: celery.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  staging.py  test.py
backend/flows_library/: data_processing.py
backend/flows_library/tests/: test_data_processing.py
backend/frontend/: package.json
backend/frontend/src/: main.css
deploy/: .env.tpl  justfile
docs/: architecture.md  backlog.md  data-model.mmd  design-review.md  design-system.md  user-stories.md
gateway/: Dockerfile  main.py  pyproject.toml
gateway/api/v1/: router.py
gateway/api/v1/endpoints/: deployments.py  flows.py  runs.py
gateway/core/: config.py  prefect_client.py  security.py
gateway/schemas/: execution.py  flow.py
gateway/tests/: conftest.py  test_endpoints.py  test_flows.py  test_integration.py  test_runs.py  test_security.py
mcp-server/: main.py  requirements.txt  tools.py
mojo-compute/: Dockerfile  server.py
otel/: collector-dev.yml  collector-production.yml  collector-staging.yml
terraform/: backend.hcl.example  backend.tf  main.tf  outputs.tf  providers.tf  (+2 more)
worker/: Dockerfile  pyproject.toml  start-worker.sh
(+61 files in other folders)
