[project]
name = "django-prefect-template"
version = "0.1.0"
description = "Template for Django + Prefect integration with FastAPI gateway and S3 Data Lake"
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "MIT"}

authors = [
    {name = "cxhandley"}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.15.0",
    "pytest-xdist==3.8.0",
    "httpx==0.28.1",
]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["backend/apps", "gateway/tests", "worker/tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=backend",
    "--cov=gateway",
    "--cov=worker",
    "--cov-report=html",
    "--cov-report=term-missing",
]