[project]
name = "django-doit-template"
version = "0.1.0"
description = "Template for Django + doit + papermill + DuckDB data pipelines"
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "MIT"}

authors = [
    {name = "cxhandley"}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "djlint==1.36.4",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
    "pytest-django==4.11.1",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.15.0",
    "pytest-xdist==3.8.0",
    "httpx==0.28.1",
]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["backend/apps"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=backend",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
ignore = "H006,H031"
