[project]
name = "django-prefect-backend"
version = "0.1.0"
description = "Django backend for Prefect integration"
requires-python = "==3.13.*"

dependencies = [
    "django==5.2.9",
    "psycopg[binary]==3.3.2",
    "django-environ==0.12.0",
    "django-storages==1.14.6",
    "boto3==1.41.1",
    "duckdb==1.4.4",
    "polars==1.38.1",
    "pyarrow==23.0.0",
    "redis==7.1.1",
    "django-redis==6.0.0",
    "httpx==0.28.1",
    "pyjwt==2.11.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "ipython==9.10.0",
    "django-stubs==5.2.9",
]

test = [
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "pytest-cov==6.3.0",
    "pytest-mock==3.15.0",
    "pytest-xdist==3.8.0",
    "factory-boy==3.3.3",
    "faker==40.4.0",
    "moto[s3]==5.1.21",
    "freezegun==1.5.5",
]

[tool.setuptools.packages.find]
include = ["apps", "config", "flows_library"]