[project]
name = "django-doit-backend"
version = "0.1.0"
description = "Django backend for doit + papermill + DuckDB pipelines"
requires-python = "==3.13.*"

dependencies = [
    "django==5.2.9",
    "psycopg[binary]==3.3.2",
    "django-environ==0.12.0",
    "django-storages==1.14.6",
    "boto3==1.41.1",
    "s3fs==2026.2.0",
    "duckdb==1.4.4",
    "polars==1.38.1",
    "numpy>=2.0",
    "pyarrow==23.0.0",
    "gunicorn==23.0.0",
    "opentelemetry-api==1.28.0",
    "opentelemetry-sdk==1.28.0",
    "opentelemetry-instrumentation-django==0.49b0",
    "opentelemetry-instrumentation-celery==0.49b0",
    "opentelemetry-instrumentation-botocore==0.49b0",
    "opentelemetry-instrumentation-psycopg==0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.28.0",
    "whitenoise==6.9.0",
    "django-compressor==4.5.1",
    "redis==7.1.1",
    "django-redis==6.0.0",
    "celery==5.5.3",
    "flower==2.0.1",
    "doit==0.36.0",
    "papermill==2.6.0",
    "nbformat==5.10.4",
    "jupyter-client==8.6.3",
    "ipykernel==6.29.5",
    "argon2-cffi==25.1.0",
    "scipy>=1.14",
    "umap-learn>=0.5",
    "altair>=5.0,<6",
    "cryptography>=46.0,<47",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "ipython==9.10.0",
    "django-stubs==5.2.9",
]

# Install when using the Prefect pipeline backend (PIPELINE_BACKEND=prefect)
prefect = [
    "prefect>=3.0,<4",
    "httpx>=0.27",
]

test = [
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "pytest-cov==6.3.0",
    "pytest-mock==3.15.0",
    "pytest-xdist==3.8.0",
    "factory-boy==3.3.3",
    "faker==40.4.0",
    "moto[s3]==5.1.21",
    "freezegun==1.5.5",
    "nbmake==1.5.4",
]

[tool.setuptools.packages.find]
include = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["apps"]
pythonpath = ["."]
addopts = "-n auto"
