[project]
name = "django-prefect-worker"
version = "0.1.0"
description = "Prefect worker with Polars processing"
requires-python = "==3.13.*"

dependencies = [
    "prefect==3.6.16",
    "polars==1.38.1",
    "pyarrow==23.0.0",
    "s3fs==2026.2.0",
    "boto3==1.41.1",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]